--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,1 +1,6 @@
-<p>card-form works!</p>
+<form [formGroup]="cardForm">
+  <input formControlName="name">
+</form>
+
+<div>Form content: {{ cardForm.value | json }}</div>
+<div>Form is valid: {{ cardForm.valid }}</div>
