--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,6 +1,7 @@
 <form [formGroup]="cardForm">
-  <input formControlName="name">
+  <app-input [control]="cardForm.get('name')"></app-input>
 </form>
-
-<div>Form content: {{ cardForm.value | json }}</div>
+<hr />
+<div>Form Contents: {{ cardForm.value | json }}</div>
 <div>Form is valid: {{ cardForm.valid }}</div>
+<div>Errors around name: {{ cardForm.controls['name'].errors | json }}</div>
