--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,19 +1,19 @@
 <input [formControl]="control"/>
-<!--<ng-container-->
-<!--  *ngIf="-->
-<!--      cardForm.controls['name'].dirty &&-->
-<!--      cardForm.controls['name'].touched &&-->
-<!--      cardForm.controls['name'].errors-->
-<!--    "-->
-<!--&gt;-->
-<!--  <div *ngIf="cardForm.controls['name'].errors['required']">-->
-<!--    Value is required.-->
-<!--  </div>-->
-<!--  <div *ngIf="cardForm.controls['name'].errors['minlength']">-->
-<!--    Value you entered is-->
-<!--    {{ cardForm.controls['name'].errors['minlength'].actualLength }}-->
-<!--    characters long, but it must be at least-->
-<!--    {{ cardForm.controls['name'].errors['minlength'].requiredLength }}-->
-<!--    characters-->
-<!--  </div>-->
-<!--</ng-container>-->
+<ng-container
+  *ngIf="
+      control.dirty &&
+      control.touched &&
+      control.errors
+    "
+>
+  <div *ngIf="control.errors['required']">
+    Value is required.
+  </div>
+  <div *ngIf="control.errors['minlength']">
+    Value you entered is
+    {{ control.errors['minlength'].actualLength }}
+    characters long, but it must be at least
+    {{ control.errors['minlength'].requiredLength }}
+    characters
+  </div>
+</ng-container>
