Added -> ngx-mask

--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -4,8 +4,7 @@
     <input
       class="input"
       [formControl]="control"
-      [ngClass]="{ 'is-danger': showErrors() }"
-    >
+      [ngClass]="{ 'is-danger': showErrors() }">
   </div>
   <ng-container
     *ngIf="showErrors()">
